tests/assets/www/1.1/errors/expired_request_token.json.php
<?php

header('Content-Type: application/json; charset=UTF-8', true, 400);

?>
<?xml version="1.0" encoding="UTF-8"?>
<hash>
  <error>Invalid / expired Token</error>
  <request>/oauth/access_token</request>
</hash>
